# The-Prism

./: .gitignore  Makefile  PHASE_6_PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/prism/: __init__.py  config.py  main.py
backend/prism/agent/: __init__.py  memory.py
backend/prism/api/: __init__.py  router.py
backend/prism/api/endpoints/: __init__.py  agent.py  compare.py  dashboard.py  generate.py  monitor.py  resolver.py  scan.py
backend/prism/cli/: __init__.py  main.py
backend/prism/cli/commands/: cmd_generate.py  cmd_history.py  cmd_info.py  cmd_resolve.py  cmd_scan.py  cmd_serve.py
backend/prism/cli/display/: __init__.py  renderers.py  theme.py
backend/prism/core/: __init__.py  auth.py  license.py
backend/prism/db/: __init__.py  engine.py  migrations.py  models.py
backend/prism/generate/: __init__.py  engine.py
backend/prism/monitor/: __init__.py  telemetry.py
backend/prism/resolver/: __init__.py  arch_detector.py  auto_resolver.py  lora_targets.py
backend/prism/scan/: __init__.py  engine.py
backend/prism/schemas/: __init__.py  models.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_compare.py  test_generate_engine.py  test_persistence.py  test_resolver.py  test_scan_engine.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/history/: page.tsx
frontend/app/monitor/: page.tsx
frontend/app/resolve/: page.tsx
frontend/app/scan/: page.tsx
frontend/components/: nav.tsx  radar-chart.tsx  score-heatmap.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/lib/: api.ts
